--- a/app/partials/dataViz.html
+++ b/app/partials/dataViz.html
@@ -40,7 +40,8 @@
 </div>
 
 <div class="bp-goal-comparison">
-  <h2>Blood pressure</h2>
+  <h2 class="has-more-info">Blood pressure</h2>
+  <a href="#" tooltip="Reading taken on: {{ pt.bpDate | date:'MM/dd/yyyy @ h:mma' }}" tooltip-placement="right" class="tooltip"><img src="img/info-icon-trans.gif" alt="More information on this patient's blood pressure readings"></a>
   <div class="table-contain">
     <table width="300">
       <tr class="header">
