--- a/app/partials/dataViz.html
+++ b/app/partials/dataViz.html
@@ -75,6 +75,6 @@
 
 
 <div class="footer">
-  <button>Save patient information</button>
+  <button ng-click="saveToDB()">Save patient information</button>
 </div>
 
