--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -92,18 +92,16 @@
   <div class="section medications" ng-show="pt.isOnMedication">
     <table id="medications" width="100%">
       <tr class="header">
-        <td width="25%">Medication</td>
-        <td class="info-column" width="20%">Dosage</td>
-        <td class="info-column" width="25%">JNC8 target dose(s)</td>
+        <td width="35%">Medication</td>
+        <td class="info-column" width="25%">dose</td>
+        <td class="info-column" width="20%">JNC8 target dose(s)</td>
         <td class="info-column" width="20%">Max for pt?</td>
-        <td class="info-column" width="10%">Remove</td>
       </tr>
       <tr ng-repeat="med in pt.encounter.currentMeds">
-        <td width="30%">{{ med.medName }}</td>
-        <td width="25%" class="info-column">{{ med.dosage }}{{ ' ' + med.units }}</td>
-        <td width="25%" class="info-column">{{ med.targetDoseRecs | numTargetDoses }}{{ ' ' + med.units }}</td>
-        <td width="25%" class="info-column">{{ med.atMax }} </td>
-        <td width="20%" class="info-column"><span class="x-med" ng-click="removeMed(med)">x</span></td>
+        <td width="35%">{{ med.medName }}</td>
+        <td width="25%" class="info-column">{{ med.dose }}{{ med.units }}</td>
+        <td width="20%" class="info-column">{{ med.targetDoseRecs | numTargetDoses }}{{ ' ' + med.units }}</td>
+        <td width="20%" class="info-column">{{ med.atMax }} </td>
       </tr>
     </table>
   </div>
