--- a/app/partials/dataViz.html
+++ b/app/partials/dataViz.html
@@ -64,6 +64,6 @@
 
 
 <div class="footer">
-  <button ng-click="saveToDB()">Save patient information</button>
+  <button ng-if="standAlone" ng-click="saveToDB()">Save patient information</button>
 </div>
 
