--- a/app/partials/drugDetails.html
+++ b/app/partials/drugDetails.html
@@ -3,9 +3,14 @@
         <div class="inline-info price right med-detail" ng-if="!goodRxErr">{{ price | currency }}</div> 
   </div> 
   <div class="med-details cf" ng-if="!goodRxErr" ng-show="showDetails">
-      <div class="inline-info left"><span class="med-detail">
-        <span class="label">dose:</span> {{ med.initialDoseRecs[0] }}
-      </span>
+      <div class="inline-info left">
+        <span class="med-detail">
+          <span class="label">Dose:</span> {{ med.initialDoseRecs[0] }}
+        </span>
+        <span class="med-detail">
+          <span class="label">Units:</span> {{ units }}
+        </span>
+      </div>
       <div class="inline-info right"><span class="med-detail"><a href="{{ drugInfo.url }}" target="_blank">More pricing information</a></span>
       <span class="med-detail"><a href="{{emailsLink}}" title="Email pricing information for {{med.medName}}" target="_blank">Email pricing details</a></span></div>
   </div>
