--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -1,4 +1,4 @@
-<form name="dataForm" class="data-form" novalidate ng-submit="goToDataViz()" ng-model="dataForm">
+<form name="dataForm" class="data-form" novalidate ng-model="dataForm">
   <section>
     <label for="age">Patient's age:</label>
     <div class="input-wrapper">
@@ -111,7 +111,7 @@
       </tr>
 
     </table>
-    <button ng-if="standAlone" ng-="addDrugField()">Add Another Medication</button>
+    <button ng-if="standAlone" drugAdder >Add Another Medication</button>
   </div>
-<input class="submit-button" type="submit" value="Get Treatment Recommendations" ng-disabled="dataForm.$invalid || !buttonsSelected() || !pt.race">
+<button class="submit-button" ng-click="goToDataViz()" ng-disabled="dataForm.$invalid || !buttonsSelected() || !pt.race">Get Treatment Recommendations</button>
 </form>
