Add missing data to dataViz

--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -91,21 +91,26 @@
   <div class="section medications" ng-show="pt.isOnMedication">
   <table id="medications" ng-model="medications" width="100%">
       <tr class="header">
-        <td width="35%">Medication</td>
-        <td class="info-column" width="25%">Dose</td>
+        <td width="25%">Medication</td>
+        <td width="25%">Med Class</td>
+        <td class="info-column" width="15%">Dose</td>
         <td class="info-column" width="20%">JNC8 target dose(s)</td>
-        <td class="info-column" width="20%">Max for pt?</td>
+        <td class="info-column" width="15%">Max for pt?</td>
       </tr>
       <tr class="med-entry" ng-repeat="med in pt.encounter.currentMeds">
-        <td width="35%">
-          <input type="text" value="{{ med.medName }}" class="med-name" ng-disabled="!standAlone"></td>
-        <td width="25%" class="info-column">
+        <td width="25%">  
+          <input type="text" value="{{ med.medName }}" class="med-name" ng-disabled="!standAlone">
+        </td>
+        <td width="25%">
+          <input type="text" value="{{ med.className }}" class="med-class-name" ng-disabled="!standAlone">
+        </td>
+        <td width="15%" class="info-column">
           <input type="number" value="{{ med.dose }}" class="med-dose" ng-disabled="!standAlone">
-          </td>
+        </td>
         <td width="20%" class="info-column">
           <input type="text" value="{{ med.targetDoseRecs | numTargetDoses }} {{ med.units }}" class="med-name" ng-disabled="!standAlone">
         </td>
-        <td width="20%" class="info-column">
+        <td width="15%" class="info-column">
           <input type="text" value="{{ med.atMax }}" class="med-max" ng-disabled="!standAlone">
         </td>
       </tr>
