--- a/app/partials/drugDetails.html
+++ b/app/partials/drugDetails.html
@@ -4,8 +4,10 @@
   </div> 
   <div class="med-details cf" ng-if="!goodRxErr" ng-show="showDetails">
       <div class="inline-info left"><span class="med-detail">
-        <span class="label">dose:</span> {{ med.initialDoseRecs[0] }}
-      </span>
+<!--         <span class="label med-dose" ng-if="standAlone">Dose:</span> {{ med.initialDoseRecs[0] }} {{ med.units }}
+        </span> -->
+        <span class="label med-dose" ng-if="!standAlone">Current Dose:</span> {{ med.dose }} {{ med.units }}
+        </span>
       <div class="inline-info right"><span class="med-detail"><a href="{{ drugInfo.url }}" target="_blank">More pricing information</a></span>
       <span class="med-detail"><a href="{{emailsLink}}" title="Email pricing information for {{med.medName}}" target="_blank">Email pricing details</a></span></div>
   </div>
