--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8,7 +8,7 @@ body {
   width: 810px;
   height: auto;
   padding: 18px 40px;
-  margin: 20px auto;
+  margin: 20px auto 0px;
   border: solid #d7d7d7 1px;
   background-color: #fff;
   color: #4d4d4d;
@@ -30,6 +30,25 @@ body {
 
 div.viz {
   margin-bottom: 42px;
+}
+
+div.page-footer {
+  width: 380px;
+  margin: 0 auto 26px;
+  font-size: 12px;
+}
+
+div.page-footer ul {
+  list-style-type: none;
+}
+
+div.page-footer li {
+  padding: 2px 10px;
+  float: left;
+}
+
+div.page-footer li:first-child {
+  border-right: solid #4d4d4d 1px;
 }
 
 
@@ -349,6 +368,7 @@ tr.diastolic td.goal {
 }
 
 #bp-graph .sysLine {
+
   stroke: steelblue;
 }
 
