--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -116,7 +116,7 @@
       </tr>
 
     </table>
-    <button ng-if="standAlone" drugAdder >Add Another Medication</button>
+    <a href="#" ng-if="standAlone" drugAdder>+ Add another medication</A\a>
   </div>
 <button class="submit-button" ng-click="goToDataViz()" ng-disabled="dataForm.$invalid || !buttonsSelected() || !pt.race">Get Treatment Recommendations</button>
 </form>
