--- a/app/css/main.css
+++ b/app/css/main.css
@@ -84,6 +84,10 @@ div.tooltip {
 
 /* Form styling */
 
+div.email-capture p {
+  max-width: 380px;
+}
+
 form div.section {
   margin: 0;
   border-bottom: solid #f0f0f0 1px;
