Services return data properties of responses only

--- a/app/partials/dataViz.html
+++ b/app/partials/dataViz.html
@@ -2,7 +2,7 @@
 <div class="cf viz">
   <h2>Treatment overview</h2>
   <div class="top-div patient-status {{ recs.recStatus }}">
-    <b class="title">{{ recs.recStatus }}.</b> {{ recs.recMsg }}
+    <b class="title">{{ recs.recMsg }}
   </div>
 </div>
 
