Add redirect to index/app reload on page refresh

--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -1,6 +1,6 @@
 <form name="dataForm" class="data-form" novalidate ng-model="dataForm">
   <div class="section email-capture" ng-if="standAlone">
-    <p>If you're interested in using this application throughout your treatment, please enter your email so we can maintain a history of your treatment.</p>
+    <p><b>Optional: </b>If you're interested in using this application throughout your treatment, please enter your email so we can maintain a history of your treatment.</p>
     <input type="email" placeholder="you@example.com" />
   </div>
   <div class="section">
