--- a/app/partials/drugDetails.html
+++ b/app/partials/drugDetails.html
@@ -3,24 +3,24 @@
     <span class="rx-status contracted" ng-if="!err" ng-show="!showDetails"></span>
     <span class="rx-status expanded"  ng-if="!err" ng-show="showDetails"></span>
     <span class="rx-status rx-error right" ng-show="err" alt="There was an error getting the drug information from the GoodRx website."></span>
-    <span ng-if="!med.searchError">{{med.medName}}</span>
+    <span ng-if="!med.searchError">{{med.medicationName}}</span>
     <span ng-if="med.searchError">{{med.searchError}}</span>
     <div class="inline-info price right med-detail" ng-if="!goodRxErr">{{ price | currency }}</div> 
   </div> 
   <div class="med-details cf" ng-if="!goodRxErr" ng-show="showDetails">
       <div class="inline-info left">
         <span class="med-detail">
-          <span class="label med-dose" ng-if="standAlone">Dose:</span> <span class="dose" ng-if="standAlone">{{ med.initialDoseRecs[0] }}</span>
+          <span class="label med-dose" ng-if="standAlone">dose:</span> <span class="dose" ng-if="standAlone">{{ med.initialdoseRecs[0] }}</span>
         </span>
         <span class="med-detail">
-          <span class="label med-dose" ng-if="!standAlone">Current Dose:</span> <span class="dose" ng-if="!standAlone">{{ med.dose }}{{med.units}}</span>
+          <span class="label med-dose" ng-if="!standAlone">Current dose:</span> <span class="dose" ng-if="!standAlone">{{ med.dose }}{{med.units}}</span>
         </span>
         <span class="med-detail"> 
-          <span class="label">Units:</span> {{ units }}
+          <span class="label">units:</span> {{ units }}
         </span>
       </div>
       <div class="inline-info right"><span class="med-detail"><a href="{{ drugInfo.url }}" target="_blank">More pricing information</a></span>
-      <span class="med-detail"><a href="{{emailsLink}}" title="Email pricing information for {{med.medName}}" target="_blank">Email pricing details</a></span></div>
+      <span class="med-detail"><a href="{{emailsLink}}" title="Email pricing information for {{med.medicationName}}" target="_blank">Email pricing details</a></span></div>
   </div>
  
   <div class="goodRxAlts cf inline-info" ng-show="showDetails" ng-model="goodRxAlts" ng-if="goodRxErr">
