Refactor data structure to use camel case and include new fields

--- a/app/partials/drugInput.html
+++ b/app/partials/drugInput.html
@@ -1,14 +1,14 @@
 <tr class="med-entry">
   <td width="35%">
-    <input type="text" ng-model="MedicationName" class="med-name"></td>
+    <input type="text" ng-model="medicationName" class="med-name"></td>
   <td width="25%" class="info-column">
     <input type="text" ng-model="dose" class="med-dose">
     </td>
   <td width="20%" class="info-column">
-    <input type="text" ng-model="TargetDoseRecs" ng-filter="numTargetDoses" class="med-name">
+    <input type="text" ng-model="targetDoseRecs" ng-filter="numTargetdoses" class="med-name">
     <input type="text" ng-model="units" class="med-name">
   </td>
   <td width="20%" class="info-column">
-    <input type="text" ng-model="AtMax" class="med-max">
+    <input type="text" ng-model="atMax" class="med-max">
   </td>
 </tr>
