Test an IE8 fix on the remote server

--- a/app/partials/dataViz.html
+++ b/app/partials/dataViz.html
@@ -1,5 +1,5 @@
 
-<div class="cf viz">
+<div class="cf viz" ng-view="dataVizCtrl">
   <h2>Treatment overview</h2>
   <div class="top-div patient-status {{ recs.recStatus }}">
     <b class="title">{{ recs.recStatus }}.</b> {{ recs.recMsg }}
