Add medication field adding functionality in standalone

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -84,8 +84,8 @@ div.tooltip {
 
 /* Form styling */
 
-div.emailss-capture p {
-  max-width: 380px;
+div.email-capture p {
+  max-width: 570px;
 }
 
 form div.section {
