--- a/app/partials/drugInput.html
+++ b/app/partials/drugInput.html
@@ -1,14 +1,17 @@
-<tr class="med-entry">
-  <td width="35%">
-    <input type="text" ng-model="medicationName" class="med-name"></td>
-  <td width="25%" class="info-column">
-    <input type="text" ng-model="dose" class="med-dose">
-    </td>
-  <td width="20%" class="info-column">
-    <input type="text" ng-model="targetDoseRecs" ng-filter="numTargetdoses" class="med-name">
-    <input type="text" ng-model="units" class="med-name">
+<tr class="med-entry" ng-repeat="med in curMeds">
+  <td width="25%">  
+    <input type="text" ng-model="med.name" class="med-name">
+  </td>
+  <td width="25%">
+    <select ng-model="possibleMeds[0]" ng-options="class for class in possibleMeds" class="med-class-name">
+  </td>
+  <td width="15%" class="info-column">
+    <input type="number" ng-model="med.dose" class="med-dose">
   </td>
   <td width="20%" class="info-column">
-    <input type="text" ng-model="atMax" class="med-max">
+    <input type="text" ng-model="med.maxDose" class="med-name">
+  </td>
+  <td width="15%" class="info-column">
+    <input type="checkbox" ng-model="med.atMaxDose" checked="" class="med-max">
   </td>
 </tr>
