Medication classes determined from substrate class names

--- a/app/partials/drugInput.html
+++ b/app/partials/drugInput.html
@@ -1,6 +1,6 @@
 <tr class="med-entry" ng-repeat="med in curMeds">
   <td width="25%">  
-    <input type="text" ng-model="med.name" class="med-name">
+    <input type="text" ng-model="med.medicationName" class="med-name">
   </td>
   <td width="25%">
     <select ng-model="possibleMeds[0]" ng-options="class for class in possibleMeds" class="med-class-name">
