--- a/app/partials/drugInput.html
+++ b/app/partials/drugInput.html
@@ -3,15 +3,15 @@
     <input type="text" ng-model="med.medicationName" class="med-name">
   </td>
   <td width="25%">
-    <select ng-model="possibleMeds[0]" ng-options="class for class in possibleMeds" class="med-class-name">
+    <select ng-model="med.className" ng-options="class for class in possibleMeds" class="med-class-name">
   </td>
   <td width="15%" class="info-column">
     <input type="number" ng-model="med.dose" class="med-dose">
   </td>
   <td width="20%" class="info-column">
-    <input type="text" ng-model="med.maxDose" class="med-name">
+    <input type="text" ng-model="med.maxDose" class="med-max-dose">
   </td>
   <td width="15%" class="info-column">
-    <input type="checkbox" ng-model="med.atMaxDose" checked="" class="med-max">
+    <input type="checkbox" ng-model="med.atMax" checked="" class="med-max">
   </td>
 </tr>
