--- a/app/css/main.css
+++ b/app/css/main.css
@@ -157,6 +157,14 @@ div.medications tr td {
 
 /* Medication recommendation styling */
 
+span.add-medication {
+  font-size: 12px;
+  display: block;
+}
+span.add-medication input {
+  padding-right: 13px;
+}
+
 div.medication {
   width: 380px;
   float: left;
